add_executable(gripper_render
                    main.cpp
                    visual_geometry.cpp
                    joint.cpp
                    link.cpp
                    utils.cpp
                    gripper.cpp
                    manipulation_env.cpp)
target_link_libraries(gripper_render
                    ${urdfdom_LIBRARIES}
                    Eigen3::Eigen
                    ${VTK_LIBRARIES})